--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "erp-pesquera-frontend-shared": "file:../erp-pesquera-frontend-shared",
+    "pdf-lib": "^1.17.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
