--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-router": "^1.125.6",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "erp-pesquera-frontend-shared": "file:../erp-pesquera-frontend-shared",
@@ -24,6 +25,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
     "qrcode": "^1.5.4",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
