--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@tanstack/react-router": "^1.125.6",
     "axios": "^1.10.0",
     "chart.js": "^4.5.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "erp-pesquera-frontend-shared": "file:../erp-pesquera-frontend-shared",
     "flat-color-icons": "^1.1.0",
+    "framer-motion": "^12.23.25",
     "pdf-lib": "^1.17.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
