--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@egjs/react-flicking": "^4.14.0",
+    "@fortune-sheet/react": "^1.0.4",
     "@hookform/resolvers": "^5.1.1",
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-router": "^1.125.6",
@@ -38,6 +39,7 @@
     "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1",
     "victory": "^37.3.6",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1",
     "zustand": "^5.0.6"
   },
